# homie

./: .gitignore  LICENSE  README.md  docker-compose.yml  setup.sh  start.sh
.github/workflows/: ci.yml
homie-app/: README.md  index.html  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  vitest.config.ts
homie-app/public/: manifest.json  sw.js
homie-app/src/: App.tsx  index.css  main.tsx
homie-app/src/components/layout/: AppLayout.tsx
homie-app/src/components/ui/: Button.tsx  Card.tsx  FileUpload.tsx  Modal.tsx  SearchInput.tsx  Spinner.tsx  Tabs.tsx  Toast.tsx  index.ts  useToast.ts
homie-app/src/features/auth/: index.ts  (+4 more)
homie-app/src/hooks/: BackgroundJobsProvider.tsx  backgroundJobsContext.ts  useBackgroundJobs.tsx
homie-app/src/lib/: queryClient.ts  queryKeys.ts
homie-app/src/stores/: useStore.ts
homie-app/src/test/: utils.tsx
homie-app/src/types/: index.ts
homie-app/src/utils/: api.ts  pushNotification.ts
homie-backend/: .env.example  .gitignore  Cargo.toml  Taskfile.yml
homie-backend/src/: db.rs  errors.rs  main.rs  models.rs  scheduler.rs  validation.rs
homie-backend/src/handlers/: accounts.rs  auth.rs  budget.rs  calendar.rs  document_ai.rs  documents.rs  employments.rs  files.rs  garbage.rs  google_calendar.rs  homes.rs  jobs.rs  mod.rs  monthly_budgets.rs  push.rs  receipt.rs  salary.rs  savings.rs  shifts.rs  subscriptions.rs
homie-backend/src/middleware/: auth.rs
homie-backend/src/storage/: mod.rs  s3.rs
specs/features/17-tanstack-query/: adr.md  arch-check.md  design.md  hearing.md  requirements.md  tasks.md  test-spec.md
(+55 files in other folders)
